<resources>
    <string name="app_name">Discover</string>
    <string name="my_favorites">My Favorites</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_lable1">Tài Khoản</string>
    <string name="login_lable2">Mật Khẩu</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="register_title">TẠO TÀI KHOẢN</string>
    <string name="register_email">Email</string>
    <string name="register_btn">Đăng Ký</string>

    <string name="need_help">Trợ giúp</string>
    <string name="sign_up">Đăng ký tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="user_name">Tạo tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="name">Name</string>
    <string name="baihatmoi">Bài hát mới</string>
    <string name="baihatyeuthich">Bài hát yêu thích</string>
    <string name="xemtatca">Xem tất cả</string>
    <string name="nhacviet">Nhạc Việt Nam</string>
    <string name="nhacaumy">Nhạc Âu Mỹ</string>
    <string name="nhachan">Nhạc trữ tình</string>
    <string name="banner">Banner</string>
    <string name="malegender">Male</string>
    <string name="femalegender">Female</string>
    <string name="register">Register</string>e
</resources>
