<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333">

            <LinearLayout
                android:id="@+id/nameBar"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7.0"
                >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:background="@drawable/ic_chevron_left_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đăng kí tài khoản"
                        android:textColor="#FFFFFF"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:background="@drawable/ic_chevron_left_black_24dp" />

            </LinearLayout>


        <LinearLayout
            android:id="@+id/ln1"
            android:layout_centerInParent="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/nameBar">
            <EditText
                android:layout_marginBottom="0.5dp"
                android:background="@null"
                android:textColor="#ffe500"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/user_name"
                android:textColorHint="#ffffff"
                android:id="@+id/edtuser"
                android:maxLines="1"
                android:lines="1"
                android:inputType="text"
                />
            <View
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="5dp"/>

            <RadioGroup
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rdbtngender"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giới tính"
                    android:textColor="#ffffff"
                    android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/rdmale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malegender"
                    android:textColor="#ffffff"
                    android:layout_marginHorizontal="10dp"/>
                <RadioButton
                    android:id="@+id/rdfemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femalegender"
                    android:textColor="#ffffff"
                    android:layout_marginHorizontal="10dp"/>

            </RadioGroup>
            <EditText
                android:layout_marginBottom="0.5dp"
                android:background="@null"
                android:textColor="#ffe500"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#ffffff"
                android:id="@+id/edtpass"/>
            <View
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_marginBottom="0.5dp"
                android:background="@null"
                android:textColor="#ffe500"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Xác nhận"
                android:inputType="textPassword"
                android:textColorHint="#ffffff"
                android:id="@+id/edtrepass"/>
            <View
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/register"
                android:background="@color/login"
                android:textColor="#211f11"
                android:id="@+id/btnsignup"
                android:layout_marginTop="12dp"
                />
        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>